Fixed issue with 'x' image not showing,now it shows.

--- a/pranav_start_over/main.css
+++ b/pranav_start_over/main.css
@@ -156,14 +156,14 @@ hr {
 }
 
 .a_label {
-    display:in-line;
+    display:inline;
 	margin-top:10px;
 	margin-right:5px;
 	font-weight:bold;
 }
 
 .x_image{
-	display:in-line;
+	display:none;
 	margin-left:5px;
 	width: 15px;
     height: 15px;
